--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,30 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id 'application'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'de.fabianweller.dhbwcoursesbot.DHBWCoursesBot'
+    }
+}
 group 'de.fabianweller.dhbwcoursesbot'
 version 'v1'
+apply plugin: 'java'
+mainClassName = 'de.fabianweller.dhbwcoursesbot.DHBWCoursesBot'
 
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
 }
 
+
 dependencies {
+
     implementation group: 'org.javacord', name: 'javacord', version: '3.1.1'
-    implementation group: 'de.btobastian.sdcf4j', name: 'sdcf4j-core', version: '1.0.10'
-    implementation group: 'de.btobastian.sdcf4j', name: 'sdcf4j-javacord', version: '1.0.10'
+    implementation 'com.github.BtoBastian.sdcf4j:sdcf4j-core:v1.0.10'
+    implementation 'com.github.BtoBastian.sdcf4j:sdcf4j-javacord:v1.0.10'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.3'
 
