--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,1 @@
-org.gradle.java.home=C:/Program Files/AdoptOpenJDK/jdk-14.0.2.12-openj9
+org.gradle.java.home=C:/Program Files (x86)/AdoptOpenJDK/jdk-15.0.1.9-hotspot
